--- a/client/src/SCSS/registerLogin.scss
+++ b/client/src/SCSS/registerLogin.scss
@@ -1,27 +1,24 @@
 body {
-	background-image: url(./images/Backgound_1.jpg);
+	background-image: url(./images/BlueBackground_1920.jpg);
 	background-size: cover;
+	background-repeat: no-repeat;
 }
 .redErrorText {
 	color: red;
 	padding: 2px;
 }
-.registerPage {
-	width: 380px;
-	padding: 8% 0 0;
-	margin: auto;
-}
 form {
 	border-radius: 25px;
 	border: 5px solid #202024;
-	position: relative;
-	z-index: 1;
 	background: #c9c9c9;
 	max-width: 460px;
-	margin: 30 auto 100px;
 	padding: 25px;
 	text-align: center;
 	color: black;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 form input {
 	font-family: "Roboto", sans-serif;
@@ -68,6 +65,6 @@ form .message a {
 	margin-left: 15px;
 }
 
-#registerLabel {
+#titleLabel {
 	font-size: 200%;
 }
