--- a/client/src/SCSS/accountModals.scss
+++ b/client/src/SCSS/accountModals.scss
@@ -1,8 +1,19 @@
-.containerDiv {
-	border-radius: 25px;
+.blurredBackground {
+	z-index: 1;
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100vh;
+	width: 100vw;
+	background-color: black;
+	opacity: 0.5;
+}
+
+.editInfoContainerDiv {
+	z-index: 2;
 	color: black;
 	border: 5px solid #202024;
-	background: #c9c9c9;
+	background: white;
 	padding: 25px;
 	width: 460px;
 	text-align: center;
@@ -11,56 +22,80 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
-.editInfoForm input {
+
+.editInfoContainerDiv .exitButton {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	font-size: 20px;
+	color: #8ba8b3;
+	border: none;
+	background: none;
+	cursor: pointer;
+}
+.editInfoContainerDiv .exitButton:hover {
+	color: #50798b;
+}
+
+.editAccountForm .titleLabel {
+	display: inline-block;
+	font-size: 200%;
+	margin-bottom: 25px;
+}
+
+.editAccountForm .redErrorText {
+	color: red;
+	padding: 1px; //cause even empty errors to take up space
+}
+
+.editAccountForm input {
 	font-family: "Roboto", sans-serif;
 	outline: 1;
-	background: #ffffff;
+	background: #e5e5e5;
 	width: 100%;
-	border: 0;
-	margin: 0 0 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	padding: 8px;
 	box-sizing: border-box;
 	font-size: 14px;
 	text-align: center;
 }
-.editInfoForm button {
+
+.editAccountForm .submitButton {
 	font-family: "Roboto", sans-serif;
 	text-transform: uppercase;
 	outline: 0;
-	background: #707070;
+	background: #8ba8b3;
 	width: 100%;
 	border: 0;
+	margin-top: 5px;
 	padding: 10px;
 	color: #ffffff;
 	font-size: 14px;
-	cursor: pointer;
 	text-align: center;
-	margin-top: 10px;
+	cursor: pointer;
 }
-.editInfoForm button:hover,
-.editInfoForm button:active {
-	background: green;
-}
-
-.editInfoForm .message {
-	margin: 15px 0 0;
-	font-size: 20px;
-	font-style: bold;
+.editAccountForm .submitButton:hover,
+.editAccountForm .submitButton:active {
+	background: #50798b;
 }
 
-.editInfoForm .message a {
+.editAccountForm .otherModalsDiv {
+	margin-top: 17px;
+}
+
+.editAccountForm .otherModalsDiv .openModalLabel {
 	color: blue;
 	font-style: bold;
 	text-decoration: none;
-	font-size: 110%;
+	font-size: 22px;
 	margin-left: 15px;
+	margin-right: 15px;
+	cursor: pointer;
 }
 
-.titleLabel {
-	font-size: 200%;
-}
-
-.redErrorText {
-	color: red;
-	padding: 2px;
+.editAccountForm .otherModalsDiv .orLabel {
+	font-size: 20px;
+	margin-left: 15px;
+	margin-right: 15px;
 }
