--- a/client/src/SCSS/index.scss
+++ b/client/src/SCSS/index.scss
@@ -2,4 +2,6 @@ body {
 	background-image: url(./images/BlueBackground_1920.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
+	overflow-y: hidden;
+	overflow-x: hidden;
 }
