--- a/client/src/SCSS/registerLogin.scss
+++ b/client/src/SCSS/registerLogin.scss
@@ -1,8 +1,7 @@
-.registerLoginForm {
+.registerLoginContainerDiv {
 	border-radius: 25px;
-	color: black;
 	border: 5px solid #202024;
-	background: #c9c9c9;
+	background: white;
 	padding: 25px;
 	width: 460px;
 	text-align: center;
@@ -11,25 +10,39 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
+
+
+.registerLoginForm .titleLabel {
+	display: inline-block;
+	font-size: 200%;
+	margin-bottom: 25px;
+}
+
+.registerLoginForm .redErrorText {
+	color: red;
+	padding: 2px;
+}
+
 .registerLoginForm input {
 	font-family: "Roboto", sans-serif;
 	outline: 1;
-	background: #ffffff;
+	background: #e5e5e5;
 	width: 100%;
-	border: 0;
-	margin: 0 0 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	padding: 8px;
 	box-sizing: border-box;
 	font-size: 14px;
 	text-align: center;
 }
-.registerLoginForm button {
+.registerLoginForm .submitButton {
 	font-family: "Roboto", sans-serif;
 	text-transform: uppercase;
 	outline: 0;
-	background: #707070;
+	background: #8ba8b3;
 	width: 100%;
 	border: 0;
+	margin-top: 5px;
 	padding: 10px;
 	color: #ffffff;
 	font-size: 14px;
@@ -37,9 +50,9 @@
 	text-align: center;
 	margin-top: 10px;
 }
-.registerLoginForm button:hover,
-.registerLoginForm button:active {
-	background: green;
+.registerLoginForm .submitButton:hover,
+.registerLoginForm .submitButton:active {
+	background: #50798b;
 }
 
 .registerLoginForm .message {
@@ -54,13 +67,4 @@
 	text-decoration: none;
 	font-size: 110%;
 	margin-left: 15px;
-}
-
-.titleLabel {
-	font-size: 200%;
-}
-
-.redErrorText {
-	color: red;
-	padding: 2px;
 }
