--- a/client/src/SCSS/accountModals.scss
+++ b/client/src/SCSS/accountModals.scss
@@ -9,13 +9,13 @@
 	opacity: 0.5;
 }
 
-.editInfoContainerDiv {
+.editAccountContainerDiv {
 	z-index: 2;
 	color: black;
 	border: 5px solid #202024;
 	background: white;
 	padding: 25px;
-	width: 460px;
+	width: 540px;
 	text-align: center;
 	position: absolute;
 	top: 50%;
@@ -23,7 +23,30 @@
 	transform: translate(-50%, -50%);
 }
 
-.editInfoContainerDiv .exitButton {
+.left {
+	width: 100px;
+	height: 100px;
+	transition: 0.5s;
+	float: left;
+	box-shadow: -2px 2px 0 black;
+}
+
+.editAccountContainerDiv .backButton {
+	position: absolute;
+	top: 5px;
+	left: 5px;
+	font-size: 30px;
+	color: #8ba8b3;
+	border: none;
+	background: none;
+	cursor: pointer;
+	transform: rotate(-180deg);
+}
+.editAccountContainerDiv .backButton:hover {
+	color: #50798b;
+}
+
+.editAccountContainerDiv .exitButton {
 	position: absolute;
 	top: 5px;
 	right: 5px;
@@ -33,7 +56,7 @@
 	background: none;
 	cursor: pointer;
 }
-.editInfoContainerDiv .exitButton:hover {
+.editAccountContainerDiv .exitButton:hover {
 	color: #50798b;
 }
 
@@ -80,11 +103,11 @@
 	background: #50798b;
 }
 
-.editAccountForm .otherModalsDiv {
-	margin-top: 17px;
+.editAccountForm .otherEditModalsDiv {
+	margin-top: 40px;
 }
 
-.editAccountForm .otherModalsDiv .openModalLabel {
+.editAccountForm .otherEditModalsDiv .openModalLabel {
 	color: blue;
 	font-style: bold;
 	text-decoration: none;
@@ -94,8 +117,23 @@
 	cursor: pointer;
 }
 
-.editAccountForm .otherModalsDiv .orLabel {
+#deleteLabel {
+	color: red;
+}
+
+.editAccountForm .otherEditModalsDiv .orLabel {
 	font-size: 20px;
 	margin-left: 15px;
 	margin-right: 15px;
+}
+
+.warningMessage {
+	font-size: 20px;
+}
+
+.warningMessage .capitalDelete {
+	font-size: 16px;
+	color: red;
+	margin-left: 2px;
+	margin-right: 2px;
 }
