--- a/client/src/SCSS/registerLoginPages.scss
+++ b/client/src/SCSS/registerLoginPages.scss
@@ -1,3 +1,17 @@
+$darkBlueFromBackgroundImage: #305469;
+$lightBlueFromBackgroundImage: #a9bdc4;
+
+.registerLoginBackgroundDiv {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100vw;
+	background-color: $lightBlueFromBackgroundImage;
+	background-image: url(./images/BlueBackground_1920.jpg);
+	background-repeat: no-repeat;
+}
+
 .registerLoginContainerDiv {
 	border-radius: 25px;
 	border: 5px solid #202024;
