--- a/client/src/SCSS/accountDropdown.scss
+++ b/client/src/SCSS/accountDropdown.scss
@@ -2,6 +2,7 @@ $blueGray: #50677f;
 $lightBlueGray: #596f87;
 
 .accountConstainerDiv {
+	float: left;
 	border: 5px solid $lightBlueGray;
 	border-top: none;
 	border-right: none;
