Worked further on project components and frontend css

--- a/client/src/SCSS/accountModals.scss
+++ b/client/src/SCSS/accountModals.scss
@@ -4,7 +4,7 @@ $darkTealBlue: #50798b;
 $lightGray: #e5e5e5;
 
 
-.blurredBackgroundDiv {
+.accountModalsBlurredBackgroundDiv {
 	z-index: 1;
 	position: absolute;
 	left: 0;
