--- a/client/src/SCSS/account/accountModals.scss
+++ b/client/src/SCSS/account/accountModals.scss
@@ -1,8 +1,4 @@
-$containerWdith:  540px;
-$lightTealBlue: #8ba8b3;
-$darkTealBlue: #50798b;
-$lightGray: #e5e5e5;
-
+@import '../utils/variables';
 
 .accountModalsBlurredBackgroundDiv {
 	z-index: 1;
@@ -22,7 +18,7 @@ $lightGray: #e5e5e5;
 	background: white;
 	padding: 25px;
 	height: 380px;
-	width: $containerWdith;
+	width: $editAccountModalWidth;
 	text-align: center;
 	position: absolute;
 	top: 50%;
@@ -34,14 +30,14 @@ $lightGray: #e5e5e5;
 		top: 5px;
 		left: 5px;
 		font-size: 30px;
-		color: $lightTealBlue;
+		color: $lightBlueTeal;
 		border: none;
 		background: none;
 		cursor: pointer;
 		transform: rotate(-180deg);
 	}
 	.backButton:hover {
-		color: $darkTealBlue;
+		color: $darkBlueTeal;
 	}
 
 	.exitButton {
@@ -49,13 +45,13 @@ $lightGray: #e5e5e5;
 		top: 5px;
 		right: 5px;
 		font-size: 20px;
-		color: $lightTealBlue;
+		color: $lightBlueTeal;
 		border: none;
 		background: none;
 		cursor: pointer;
 	}
 	.exitButton:hover {
-		color: $darkTealBlue;
+		color: $darkBlueTeal;
 	}
 }
 
@@ -89,7 +85,7 @@ $lightGray: #e5e5e5;
 		font-family: "Roboto", sans-serif;
 		text-transform: uppercase;
 		outline: 0;
-		background: $lightTealBlue;
+		background: $lightBlueTeal;
 		width: 100%;
 		border: 0;
 		margin-top: 5px;
@@ -101,7 +97,7 @@ $lightGray: #e5e5e5;
 	}
 	.submitButton:hover,
 	.submitButton:active {
-		background: $darkTealBlue;
+		background: $darkBlueTeal;
 	}
 
 	.warningMessage {
@@ -117,7 +113,7 @@ $lightGray: #e5e5e5;
 }
 
 .openOtherModalsDiv {
-	width: $containerWdith;
+	width: $editAccountModalWidth;
 	position: absolute;
 	bottom: 30px;
 	text-align: center;
