--- a/client/src/SCSS/authentication/registerLoginPages.scss
+++ b/client/src/SCSS/authentication/registerLoginPages.scss
@@ -1,5 +1,4 @@
-$darkBlueFromBackgroundImage: #305469;
-$lightBlueFromBackgroundImage: #a9bdc4;
+@import '../utils/variables';
 
 .registerLoginBackgroundDiv {
 	position: absolute;
@@ -8,7 +7,7 @@ $lightBlueFromBackgroundImage: #a9bdc4;
 	height: 100vh;
 	width: 100vw;
 	background-color: $lightBlueFromBackgroundImage;
-	background-image: url(./images/BlueBackground_1920.jpg);
+	background-image: url(../images/BlueBackground_1920.jpg);
 	background-repeat: no-repeat;
 }
 
