--- a/client/src/SCSS/projects/projectsList.scss
+++ b/client/src/SCSS/projects/projectsList.scss
@@ -1,11 +1,13 @@
-
+@import '../utils/variables';
 
 .projectFilterBarDiv {
 	height: 60px;
 	width: 100vw;
-	background-color: #f2f2f2;
-	margin: 0;
-	padding: 0;
+	background-color: $lightGray;
+	border: 1px solid black;
+	border-top: none;
+	border-left: none;
+	border-right: none;
 
 	.newProjectClickableDiv {
 		float: left;
