--- a/client/src/SCSS/authentication/registerLoginPages.scss
+++ b/client/src/SCSS/authentication/registerLoginPages.scss
@@ -1,86 +1,82 @@
 @import '../utils/variables';
 
-.registerLoginBackgroundDiv {
+.register-login-background {
 	position: absolute;
 	top: 0;
 	left: 0;
+	background-image: url(../images/BlueBackground_1920.jpg);
 	height: 100vh;
 	width: 100vw;
-	background-color: $lightBlueFromBackgroundImage;
-	background-image: url(../images/BlueBackground_1920.jpg);
-	background-repeat: no-repeat;
-}
+	font-family: Verdana, Geneva, sans-serif;
 
-.registerLoginContainerDiv {
-	border-radius: 25px;
-	border: 5px solid #202024;
-	background: white;
-	padding: 25px;
-	width: 460px;
-	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
+	.register-login-container {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		border-radius: 25px;
+		border: 5px solid #202024;
+		background: white;
+		padding: 25px;
+		width: 500px;
+		text-align: center;
+		
+	}
 
-.registerLoginForm {
-	.titleLabel {
+	.title {
 		display: inline-block;
-		font-size: 200%;
 		margin-bottom: 25px;
+		font-size: 225%;
+		
 	}
 
-	.redErrorText {
-		color: red;
-		// Cause empty input errors to still take up space
-		padding: 1px;
-	}
-
-	.formInput {
-		font-family: "Roboto", sans-serif;
-		outline: 1;
-		background: #e5e5e5;
+	.form__input-label {
+		float: left;
 		width: 100%;
+		text-align: left;
+	}
+
+	.form__input {
 		margin-top: 5px;
 		margin-bottom: 5px;
-		padding: 8px;
 		box-sizing: border-box;
-		font-size: 14px;
+		background: #e5e5e5;
+		padding: 8px;
+		width: 100%;
 		text-align: center;
+		font-size: 14px;
+	}
+	
+	.form__errors {
+		width: 100%;
+		color: red;
 	}
 
-	.submitButton {
-		font-family: "Roboto", sans-serif;
-		text-transform: uppercase;
-		outline: 0;
-		background: #8ba8b3;
-		width: 100%;
+	.form__submit {
+		margin-top: 10px;
+		margin-bottom: 5px;
 		border: 0;
-		margin-top: 5px;
+		background: $lightBlueTeal;
 		padding: 10px;
+		width: 100%;
 		color: white;
 		font-size: 14px;
 		cursor: pointer;
-		text-align: center;
-		margin-top: 10px;
 	}
-	.submitButton:hover,
-	.submitButton:active {
-		background: #50798b;
+	.form__submit:hover,
+	.form__submit:active {
+		background: $darkBlueTeal;
 	}
 
-	.linksDiv {
-		margin: 15px 0 0;
+	.footer {
+		margin-top: 20px;
 		font-size: 20px;
-		font-style: bold;
+	}
 
-		a {
-			color: blue;
-			font-style: bold;
-			text-decoration: none;
-			font-size: 110%;
-			margin-left: 15px;
-		}
+	.footer__link {
+		margin-left: 15px;
+		color: blue;
+		font-size: 120%;
+		text-decoration: none;
 	}
 }
