--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -5,6 +5,7 @@
 $black: #000000;
 // Grays
 $lightGray: #eaeaea;
+$mediumLightGray: #bfbfbf;
 $mediumGray: #919191;
 // Blue grays
 $lightBlueGray: #596f87;
