--- a/client/src/SCSS/projects/createProjectSidebar.scss
+++ b/client/src/SCSS/projects/createProjectSidebar.scss
@@ -97,6 +97,19 @@
 		color: red;
 	}
 
+	.form__combo-box-container {
+		float: left;
+		width: 45%;
+	}
+
+	.form__combo-box-container__select {
+		margin-top: 2px;
+		margin-bottom: 5px;
+		width: 100%;
+		// one pixel smaller than associated label
+		font-size: 13px;
+	}
+
 	.form__date-container {
 		position: relative;
 		width: 45%;
@@ -120,18 +133,29 @@
 		font-size: 13px;
 	}
 
-	.form__combo-box-container {
+	.form__message-bubble-container {
 		float: left;
-		width: 45%;
-		height: 150px;
+		margin-top: 13px;
+		
 	}
 
-	.form__combo-box-container__select {
-		margin-top: 2px;
-		margin-bottom: 5px;
-		width: 100%;
-		// one pixel smaller than associated label
-		font-size: 13px;
+	.form__message-bubble-container__bubble {
+		float: left;
+		padding: 12px;
+		padding-right: 70px;
+		background-color: black;
+		font-size: 14px;
+		color: white;
+	}
+
+	.form__message-bubble-container__right-arrow {
+		float: left;
+		margin-top: 10px;
+		width: 0;
+		height: 0;
+		border-top: 10px solid transparent;
+		border-bottom: 10px solid transparent;
+		border-left: 10px solid black;
 	}
 
 	.form__submit {
