--- a/client/src/SCSS/projects/createProjectSidebar.scss
+++ b/client/src/SCSS/projects/createProjectSidebar.scss
@@ -15,8 +15,8 @@
 		border-top: none;
 		border-left: none;
 		background: white;
-		width: 500px;
 		height: 700px;
+		width: 500px;
 		text-align: center;
 		font-family: Arial, Helvetica, sans-serif;
 	}
@@ -133,22 +133,22 @@
 		font-size: 13px;
 	}
 
-	.form__message-bubble-container {
+	.form__tooltip-container {
 		float: left;
 		margin-top: 13px;
-		
+		// Becomes visible via a mouseover event added to the completionDate container
+		visibility: hidden;
 	}
 
-	.form__message-bubble-container__bubble {
+	.form__tooltip-container__text-box {
 		float: left;
 		padding: 12px;
-		padding-right: 70px;
 		background-color: black;
 		font-size: 14px;
 		color: white;
 	}
 
-	.form__message-bubble-container__right-arrow {
+	.form__tooltip-container__arrow-right {
 		float: left;
 		margin-top: 10px;
 		width: 0;
