--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -4,7 +4,7 @@
 // Basic
 $black: #000000;
 // Grays
-$lightGray: #eaeaea;
+$lightGray: #e5e5e5;
 $mediumLightGray: #bfbfbf;
 $mediumGray: #919191;
 // Blue grays
@@ -26,3 +26,8 @@ $navBarHeight: 60px;
 // Widths
 //=========
 $editAccountModalWidth:  540px;
+
+//=======
+// Forms
+//=======
+$inputMarginBottom: 10px;
