--- a/client/src/SCSS/projects/createProjectSidebar.scss
+++ b/client/src/SCSS/projects/createProjectSidebar.scss
@@ -70,6 +70,7 @@
 		padding: 8px;
 		width: 100%;
 		font-size: 14px;
+		font-family: Arial, Helvetica, sans-serif;
 	}
 
 	.form__textarea {
@@ -77,9 +78,11 @@
 		margin-bottom: $inputMarginBottom;
 		outline: none;
 		background: $lightGray;
-		padding: 4px;
+		padding: 4px 8px 4px 8px;
 		height: 200px;
 		width: 100%;
+		font-size: 14px;
+		font-family: Arial, Helvetica, sans-serif;
 		// sizing
 		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 		-moz-box-sizing: border-box; /* Firefox, other Gecko */
