Created front component for editing a project and began component for viewing particlar project

--- a/client/src/SCSS/home/navbar.scss
+++ b/client/src/SCSS/home/navbar.scss
@@ -38,6 +38,10 @@
 		width: 240px;
 	}
 
+	.navbar-button--selected {
+		background-color: $lightBlueGray;
+	}
+
 	.navbar-button__text-container {
 		@include stopTextSelection();
 
