--- a/client/src/SCSS/account/editAccountModals.scss
+++ b/client/src/SCSS/account/editAccountModals.scss
@@ -83,7 +83,7 @@
 		margin-top: 10px;
 		margin-bottom: 5px;
 		border: 0;
-		background: $lightBlueTeal;
+		background: $lightBlueGray;
 		padding: 10px;
 		width: 100%;
 		color: white;
@@ -92,7 +92,7 @@
 	}
 	.form__submit:hover,
 	.form__submit:active {
-		background: $darkBlueTeal;
+		background: $blueGray;
 	}
 
 	.modal-links-container {
