--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -8,7 +8,7 @@ $lightGray: #e5e5e5;
 $mediumLightGray: #bfbfbf;
 $mediumGray: #919191;
 // Blue grays
-$lightBlueGray: #596f87;
+$lightBlueGray: #607c99;
 $blueGray: #50677f;
 // Blue teals
 $lightBlueTeal: #8ba8b3;
@@ -26,6 +26,7 @@ $navBarHeight: 60px;
 // Widths
 //=========
 $editAccountModalWidth:  540px;
+$createProjectSidebarWidth: 500px;
 
 //=======
 // Forms
