Worked more on view project component

--- a/client/src/SCSS/account/accountDropdown.scss
+++ b/client/src/SCSS/account/accountDropdown.scss
@@ -4,11 +4,11 @@
 	.dropdown-container {
 		position: absolute;
 		right: 0;
-		border: 5px solid $lightBlueGray;
+		border: 5px solid black;
 		border-top: none;
 		border-right: none;
 		background: white;
-		height: 700px;
+		height: 300px;
 		width: 235px;
 		text-align: left;
 		font-family: Arial, Helvetica, sans-serif;
