--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -4,6 +4,7 @@
 // Basic
 $black: #000000;
 // Grays
+$veryLightGray: #f3f2f1;
 $lightGray: #e5e5e5;
 $mediumLightGray: #bfbfbf;
 $mediumGray: #919191;
