Worked further on View project modal

--- a/client/src/SCSS/home/navbar.scss
+++ b/client/src/SCSS/home/navbar.scss
@@ -18,6 +18,7 @@
 	.navbar-button {
 		position: relative;
 		float: left;
+		background-color: $blueGray;
 		height: $navBarHeight;
 		width: 200px;
 		text-align: center;
