--- a/client/src/SCSS/projects/viewProjectModal.scss
+++ b/client/src/SCSS/projects/viewProjectModal.scss
@@ -8,18 +8,16 @@
 		opacity: 0.5;
 		height: 100vh;
 		width: 100vw;
-		overflow: auto;
 	}
 
 	.view-project-modal {
 		position: absolute;
-		left: 50%;
-		transform: translate(-50%);
-		margin-top: 5px;
+		margin: 10px;
 		border: 5px solid black;
 		background: #e6e9ee;
-		height: 500px;
-		width: 90vw;
+		// This width tends to have the least appearance of change
+		// ...when the width is calculated and overwritten using js
+		width: 97.5vw;
 		font-family: Arial, Helvetica, sans-serif;
 	}
 
@@ -34,7 +32,14 @@
 
 	.padded-container {
 		// No padding on the top because of the header
-		padding: 40px 25px 25px 25px;
+		padding: 0px 25px 25px 25px;
+	}
+
+	.project-name {
+		position: relative;
+		padding-top: 24px;
+		text-align: center;
+		font-size: 150%;
 	}
 
 	.view-project-table {
@@ -44,41 +49,47 @@
 
 	.view-project-table__data {
 		width: 33.33%;
-		text-overflow: ellipsis;
 	}
 
-	.first-container {
+	.content-container {
 		margin: 10px;
 		border: 2px solid black;
 		background-color: white;
-		padding: 10px;
+		padding: 0px 10px 20px 20px;
+		min-height: 400px;
+		overflow-wrap: anywhere;
 	}
 
-	.first-container__project-name {
+	.content-container__title {
+		position: relative;
+		text-align: center;
+		font-size: 140%;
+	}
+
+	.content-container__description-prefix {
 		display: block;
 		margin: 5px 0px 5px 0px;
-		font-size: 130%;
 		font-weight: bold;
 	}
 
-	.first-container__creation-info {
+	.content-container__description-info {
 		display: block;
+		margin: 0px 20px 20px 20px;
+		line-height: 20px;
 	}
 
-	.first-container__description-title {
+	.content-container__content-prefix {
 		display: block;
-		margin: 20px 0px 5px 0px;
+		margin-bottom: 10px;
 		font-weight: bold;
 	}
 
-	.first-container__description-title {
-		display: block;
-		margin-top: 15px;
-		font-weight: bold;
+	.content-container__content-prefix--margin-top {
+		margin-top: 30px;
 	}
 
-	.first-container__description-info {
-		display: block;
-		margin-left: 10px;
+	.content-container__content-info {
+		margin: 5px 0px 5px 7px;
+		font-weight: normal;
 	}
 }
