--- a/client/src/SCSS/projects/viewProjectModal.scss
+++ b/client/src/SCSS/projects/viewProjectModal.scss
@@ -21,9 +21,58 @@
 		font-family: Arial, Helvetica, sans-serif;
 	}
 
+	.project-options-container {
+		z-index: 2;
+		position: absolute;
+		top: 12px;
+		right: 70px;
+	}
+
+	.project-options-container__button {
+		margin-left: 105px;
+		border: none;
+		background: none;
+		color: $mediumGray;
+		font-size: 26px;
+		cursor: pointer;
+	}
+	.project-options-container__button:hover,
+	.project-options-container__button:active {
+		color: $black;
+	}
+
+	.project-options-container__arrow-up {
+		margin-left: 98px;
+		border-left: 15px solid transparent;
+		border-right: 15px solid transparent;
+		border-bottom: 15px solid black;
+		height: 0;
+		width: 0;
+	}
+
+	.project-options-container__dropdown {
+		border: 2px solid black;
+		background-color: white;
+	}
+
+	.project-options-container__dropdown__option {
+		display: block;
+		border-bottom: 1px solid gray;
+		padding: 12px;
+		cursor: pointer;
+	}
+	.project-options-container__dropdown__option:hover,
+	.project-options-container__dropdown__option:active {
+		background-color: $lightGray;
+	}
+
+	.project-options-container__dropdown__option--no-border {
+		border-bottom: none;
+	}
+
 	.x-button {
 		@include back-exit-buttons();
-		right: 15px;
+		right: 20px;
 	}
 	.x-button:hover,
 	.x-button:active {
@@ -36,14 +85,12 @@
 	}
 
 	.project-name {
-		position: relative;
 		padding-top: 24px;
 		text-align: center;
 		font-size: 150%;
 	}
 
 	.view-project-table {
-		height: 100%;
 		width: 100%;
 	}
 
@@ -51,7 +98,7 @@
 		width: 33.33%;
 	}
 
-	.content-container {
+	.project-box {
 		margin: 10px;
 		border: 2px solid black;
 		background-color: white;
@@ -60,36 +107,30 @@
 		overflow-wrap: anywhere;
 	}
 
-	.content-container__title {
+	.project-box__title {
 		position: relative;
 		text-align: center;
 		font-size: 140%;
 	}
 
-	.content-container__description-prefix {
-		display: block;
-		margin: 5px 0px 5px 0px;
-		font-weight: bold;
-	}
-
-	.content-container__description-info {
-		display: block;
-		margin: 0px 20px 20px 20px;
-		line-height: 20px;
-	}
-
-	.content-container__content-prefix {
-		display: block;
+	.project-box__content {
 		margin-bottom: 10px;
-		font-weight: bold;
 	}
 
-	.content-container__content-prefix--margin-top {
+	.project-box__content--margin-top {
 		margin-top: 30px;
 	}
 
-	.content-container__content-info {
-		margin: 5px 0px 5px 7px;
-		font-weight: normal;
+	.project-box__description {
+		display: block;
+		margin-bottom: 20px;
+	}
+
+	.project-box__content__type {
+		font-weight: bold;
+	}
+
+	.project-box__content__info {
+		margin-left: 7px;
 	}
 }
