--- a/client/src/SCSS/account/accountDropdown.scss
+++ b/client/src/SCSS/account/accountDropdown.scss
@@ -1,6 +1,18 @@
 @import '../utils/variables';
 
 .account-dropdown-component {
+	.blurred-background {
+		position: absolute;
+		left: 0;
+		top: 0;
+		background-color: black;
+		opacity: 0.5;
+		height: 100vh;
+		width: 100vw;
+		// Made visible using JS
+		visibility: hidden;
+	}
+
 	.dropdown-container {
 		position: absolute;
 		right: 0;
