--- a/client/src/SCSS/account/accountModals.scss
+++ b/client/src/SCSS/account/accountModals.scss
@@ -2,18 +2,15 @@
 @import "../utils//mixins";
 
 .edit-account-modal-components {
-	.blurred-background {
-		position: absolute;
-		left: 0;
-		top: 0;
-		background-color: black;
-		opacity: 0.5;
-		height: 100vh;
-		width: 100vw;
-	}
-
+	// These rules allow the account modals to appear in the middle of the screen
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100vw;
+	
 	.edit-account-modal {
-		position: absolute;
+		position: fixed;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
